--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -7,7 +7,8 @@ $orange-dark: #FB9448;
 $yellow-normal: #FBBC46;
 $grey-dark: #787878;
 $grey-light: #E5E5E5;
-$err-message: #FF0A0A
+$err-message: #FF0A0A;
+$disable: #E5E5E5
 ;
 
 
