--- a/src/assets/style/components/Head.scss
+++ b/src/assets/style/components/Head.scss
@@ -18,7 +18,7 @@
 
   .progress__bar {
     width: 100%;
-    margin: 50px auto;
+    margin: 49px auto 76px;
     border: 1px solid black;
     height: 7px;
     border-radius: 30px;
