--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -8,7 +8,8 @@ $yellow-normal: #FBBC46;
 $grey-dark: #787878;
 $grey-light: #E5E5E5;
 $err-message: #FF0A0A;
-$disable: #E5E5E5
+$disable: #E5E5E5;
+$under-score: #273469
 ;
 
 
