--- a/src/assets/style/components/Title.scss
+++ b/src/assets/style/components/Title.scss
@@ -5,11 +5,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+  padding-bottom: 38px;
     .step__score {
-     flex: .7;
-      border-bottom: 2px solid black;
+     width: 180px;
+      border-bottom: 1px solid $under-score;
     }
     h2 {
       flex: 1;
+      margin: 0;
+      color: $purple-dark;
     }
   }
