--- a/src/index.scss
+++ b/src/index.scss
@@ -19,7 +19,7 @@ body {
 }
 
 .container {
-  width: 40%;
+  width: 591px;
   margin: 0 auto;
 }
 
@@ -43,6 +43,7 @@ body {
   display: flex;
   justify-content: space-between;
   color: white;
+  margin-top: 75px;
   &.start {
     justify-content: flex-end;
   }
@@ -55,6 +56,7 @@ body {
   padding: 9px 61px;
   border-radius: 30px;
   cursor: pointer;
+  font-weight: 800;
 }
 }
 
@@ -67,6 +69,7 @@ body {
   padding: 9px 61px;
   border-radius: 30px;
   cursor: pointer;
+  font-weight: 800;
 }
 
 .isDisabled {
@@ -99,10 +102,15 @@ button {
       }
 }
 
+.aligned__input-bottom {
+  padding-bottom: 26px;
+}
+
 label {
   color: $grey-dark;
   display: block;
   padding-bottom: 7px;
+  font-size: 14px;
 }
 
 .button-step {
