--- a/src/assets/style/pages/Duration.scss
+++ b/src/assets/style/pages/Duration.scss
@@ -15,8 +15,6 @@
     }
     
 }
-
-.continue__or-previous {
-    padding-top: 125px !important;
-    
+.duration__btn-continue {
+    margin-top: 195px;
 }
