--- a/src/assets/style/pages/Thanks.scss
+++ b/src/assets/style/pages/Thanks.scss
@@ -2,24 +2,29 @@
 
 
 .thanks__for {
-    padding-top: 40px;
+    padding-top: 110px;
     text-align: center;
+    width: 713px;
     h2 {
         color: $green-light;
         font-size: 36px;
+        margin: 0;
     }
     .it__is-done {
         font-size: 16px;
         color: $grey-dark;
+        margin: 19px 0 51px;
     }
     .thank__you {
         font-size: 14px;
         color: $grey-dark;
         text-align: center;
+        margin: 31px 0;
     }
     .form__is-completed {
         font-size: 14px;
         color: $grey-dark;
+        margin-bottom: 12px;
         span {
             color: $orange-dark;
         }
@@ -37,4 +42,5 @@
     padding: 9px 61px;
     border-radius: 30px;
     cursor: pointer;
+    font-weight: 800;
 }
